--- a/src/support/Makefile
+++ b/src/support/Makefile
@@ -35,7 +35,7 @@ SHIPFLAGS += $(FLAGS)
 
 default: release
 
-HEADERS = $(wildcard *.h) $(JULIAHOME)/deps/libuv/include/uv.h
+HEADERS = $(wildcard *.h) $(BUILD)/include/uv.h
 
 %.o: %.c $(HEADERS)
 	@$(call PRINT_CC, $(CC) $(CPPFLAGS) $(SHIPFLAGS) -DNDEBUG -c $< -o $@)
