utf8proc directly calls `ar` to build libraries.  We need it to call `$(AR)` instead, for cross-compiling.
Because their source contribution process isn't very friendly, and this is a pretty specific issue I'm gixing, I'm just including a patch in our repo.

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1247,6 +1247,7 @@ utf8proc-v$(UTF8PROC_VER).tar.gz:
 
 utf8proc-v$(UTF8PROC_VER)/Makefile: utf8proc-v$(UTF8PROC_VER).tar.gz
 	tar -xzf $<
+	patch $@ < utf8proc_Makefile.patch
 	touch -c $@
 
 $(UTF8PROC_OBJ_SOURCE): utf8proc-v$(UTF8PROC_VER)/Makefile
