--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@ include ../Make.inc
 
 TESTS = all core keywordargs numbers strings unicode collections hashing	\
 	remote iobuffer arrayops linalg blas fft dsp sparse bitarray random	    \
-	math functional bigint sorting statistics spawn parallel arpack file	\
+	math arrayviews functional bigint sorting statistics spawn parallel arpack file	\
 	git pkg resolve suitesparse complex version pollfd mpfr	broadcast       \
 	socket floatapprox priorityqueue readdlm regex float16 combinatorics    \
 	sysinfo rounding ranges mod2pi euler
