reorg: introduce julia_internal.h, consolidate build options into options.h
reorganize julia.h

--- a/src/Makefile
+++ b/src/Makefile
@@ -46,7 +46,7 @@ default: release
 
 release debug: %: libjulia-%
 
-HEADERS = julia.h $(wildcard support/*.h) $(LIBUV_INC)/uv.h
+HEADERS = julia.h julia_internal.h $(wildcard support/*.h) $(LIBUV_INC)/uv.h
 
 %.o: %.c $(HEADERS)
 	@$(call PRINT_CC, $(CC) $(CPPFLAGS) $(CFLAGS) $(SHIPFLAGS) -DNDEBUG -c $< -o $@)
