Updates for MSVC
patch utf8proc so it can compile in either C or C++ mode

dont define USE_COMPUTED_GOTO for MSVC
(might be an odd double-definition problem from some header)

add utf8proc info to src/flisp/Windows.mk
(needs some improvement on handling of utf8proc
version number and assumption of cl vs icl)

add strtod to Windows.mk

add DLLEXPORT before jl_init_frontend(void)

modify OSLIBS and CONFIGURE_COMMON for msvc

--- a/src/flisp/Makefile
+++ b/src/flisp/Makefile
@@ -16,12 +16,11 @@ DOBJS = $(SRCS:%.c=%.do)
 LLTDIR = ../support
 LLT = $(LLTDIR)/libsupport.a $(LIBUV) $(LIBUTF8PROC)
 
-FLAGS = -I$(LLTDIR) $(CFLAGS) \
-	-DUSE_COMPUTED_GOTO $(HFILEDIRS:%=-I%) \
+FLAGS = -I$(LLTDIR) $(CFLAGS) $(HFILEDIRS:%=-I%) \
         -I$(LIBUV_INC) -I$(JULIAHOME)/usr/include $(LIBDIRS:%=-L%) \
         -DLIBRARY_EXPORTS
 ifneq ($(USEMSVC), 1)
-FLAGS += -Wall -Wno-strict-aliasing -fvisibility=hidden 
+FLAGS += -Wall -Wno-strict-aliasing -DUSE_COMPUTED_GOTO -fvisibility=hidden 
 endif
 LIBFILES = $(LLT)
 LIBS = $(LIBFILES)
