Minor MSVC changes
compile basename and dirname for msvc

disable line endings error

define HUGE_VALF if needed

add shell32.lib and winmm.lib to OSLIBS

modify preprocessing for MSVC

add include path to openlibm for fenv.h

--- a/src/flisp/Makefile
+++ b/src/flisp/Makefile
@@ -10,6 +10,9 @@ LIBTARGET = lib$(NAME)
 
 SRCS = flisp.c builtins.c string.c equalhash.c table.c iostream.c \
         julia_extensions.c
+ifeq ($(USEMSVC), 1)
+SRCS += basename.c dirname.c
+endif
 
 OBJS = $(SRCS:%.c=%.o)
 DOBJS = $(SRCS:%.c=%.do)
