Work to get basic REPL to compile with MSVC
explicit casts and fix ifdefs (__WIN32__ => _WIN32)

remove unistd header already included in repl.h

remove DLLEXPORT from repl.h

use hex code for escape

put back getopt.h

define dirname and PATH_MAX for repl

fix LDFLAGS that MSVC doesn't understand

skip julia_res.o with msvc

extern C linkage on repl

--- a/ui/Makefile
+++ b/ui/Makefile
@@ -32,6 +32,7 @@ ifeq ($(OS),WINNT)
 $(build_bindir)/julia.bat: $(JULIAHOME)/contrib/windows/*.bat
 	cp $(JULIAHOME)/contrib/windows/*.bat $(build_bindir)
 julia-release julia-debug: $(build_bindir)/julia.bat
+ifneq ($(USEMSVC), 1)
 julia_res.o: $(JULIAHOME)/contrib/windows/julia.rc
 	JLVER=`cat $(JULIAHOME)/VERSION` && \
 	JLVERi=`echo $$JLVER | perl -nle \
@@ -41,6 +42,7 @@ julia_res.o: $(JULIAHOME)/contrib/windows/julia.rc
 $(build_bindir)/julia$(EXE): julia_res.o
 $(build_bindir)/julia-debug$(EXE): julia_res.o
 JLDFLAGS += julia_res.o
+endif
 endif 
 
 julia-release: $(build_bindir)/julia$(EXE)
