--- a/ui/Makefile
+++ b/ui/Makefile
@@ -18,9 +18,6 @@ JLDFLAGS += $(WHOLE_ARCHIVE) $(build_libdir)/libopenlibm.a $(NO_WHOLE_ARCHIVE)
 endif
 endif
 
-julia-release: julia-basic
-julia-debug: julia-debug-basic
-
 release debug:
 	$(MAKE) julia-$@
 
@@ -39,22 +36,22 @@ julia_res.o: $(JULIAHOME)/contrib/windows/julia.rc
 		'/^(\d+)\.?(\d*)\.?(\d*)/ && \
 		print int $$1,",",int $$2,",0,",int $$3'` && \
 	$(CROSS_COMPILE)windres $< -O coff -o $@ -DJLVER=$$JLVERi -DJLVER_STR=\\\"$$JLVER\\\"
-$(build_bindir)/julia-basic$(EXE): julia_res.o
-$(build_bindir)/julia-debug-basic$(EXE): julia_res.o
+$(build_bindir)/julia$(EXE): julia_res.o
+$(build_bindir)/julia-debug$(EXE): julia_res.o
 JLDFLAGS += julia_res.o
 endif 
 
-julia-basic: $(build_bindir)/julia-basic$(EXE)
-julia-debug-basic: $(build_bindir)/julia-debug-basic$(EXE)
+julia-release: $(build_bindir)/julia$(EXE)
+julia-debug: $(build_bindir)/julia-debug$(EXE)
 
-$(build_bindir)/julia-basic$(EXE): repl.o repl-basic.o
+$(build_bindir)/julia$(EXE): repl.o repl-basic.o
 	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(SHIPFLAGS) $^ -o $@ -L$(build_private_libdir) -L$(build_libdir) -L$(build_shlibdir) -ljulia $(JLDFLAGS))
-$(build_bindir)/julia-debug-basic$(EXE): repl.do repl-basic.do
+$(build_bindir)/julia-debug$(EXE): repl.do repl-basic.do
 	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(DEBUGFLAGS) $^ -o $@ -L$(build_private_libdir) -L$(build_libdir) -L$(build_shlibdir) -ljulia-debug $(JLDFLAGS))
 
 clean: | $(CLEAN_TARGETS)
 	rm -f *.o *.do
-	rm -f $(build_bindir)/julia-*-basic $(build_bindir)/julia
+	rm -f $(build_bindir)/julia*
 
 .PHONY: clean release debug julia-release julia-debug
 
