Java benchmarks: rearrange and rename some files.
Why does Java need four files and a crazy directory hierarchy where
every single other language needs just a single file? Blech.

--- a/test/perf/micro/java/pom.xml
+++ b/test/perf/micro/java/pom.xml
@@ -39,7 +39,7 @@
 		    </execution>
 		  </executions>
 		  <configuration>
-		    <mainClass>PerfJavaBLAS</mainClass>
+		    <mainClass>PerfBLAS</mainClass>
 		  </configuration>
 		</plugin>
 	  </plugins>
