Don't run Stata benchmark by default

--- a/test/perf/micro/Makefile
+++ b/test/perf/micro/Makefile
@@ -111,8 +111,7 @@ BENCHMARKS = \
 	benchmarks/octave.csv \
 	benchmarks/r.csv \
 	benchmarks/javascript.csv \
-	benchmarks/mathematica.csv \
-	benchmarks/stata.csv
+	benchmarks/mathematica.csv
 
 benchmarks.csv: bin/collect.pl $(BENCHMARKS)
 	@$(call PRINT_PERL, $^ >$@)
