--- a/contrib/mac/app/Makefile
+++ b/contrib/mac/app/Makefile
@@ -25,6 +25,7 @@ dmg:
 	platypus -a Julia -p /bin/bash -V $(JULIA_VERSION) -R -u "The Julia Project" -i julia.icns -Q julia.icns -o "None" -I org.julialang -x -f julia script ./dmg/Julia-$(JULIA_VERSION)-pre-$(JULIA_COMMIT).app
 	-cp -f Julia.icns dmg/.VolumeIcon.icns
 	-ln -fs /Applications ./dmg/Applications
+	-chmod 775 dmg/Julia-$(JULIA_VERSION)-pre-$(JULIA_COMMIT).app/Contents/MacOS/Julia
 	hdiutil create Julia-$(JULIA_VERSION)-pre-$(JULIA_COMMIT).dmg -ov -volname "Julia" -imagekey zlib-level=9 -srcfolder dmg
 
 
