Change get-arpack target to match new filename

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -1025,7 +1025,7 @@ clean-arpack:
 distclean-arpack:
 	-rm -rf arpack-ng-$(ARPACK_VER).tar.gz arpack-ng-$(ARPACK_VER)
 
-get-arpack: arpack-ng-$(ARPACK_VER).tar.gz
+get-arpack: arpack-ng_$(ARPACK_VER).tar.gz
 configure-arpack: arpack-ng-$(ARPACK_VER)/config.status
 compile-arpack: $(ARPACK_OBJ_SOURCE)
 check-arpack: arpack-ng-$(ARPACK_VER)/checked
